# mlops-2025

./: .gitignore  pyproject.toml  questions.txt
models/: rf.pkl
notebooks/: titanic-survival.ipynb
scripts/: featurize.py  predict.py
src/mlops_2025/: run_pipeline.py
src/mlops_2025/Predictor/: XGBoost_prediictor.py  base_predictor.py  log_reg_predictor.py
src/mlops_2025/evaluator/: base_evaluate.py  evaluator.py  logistic_regression_evaluate.py  xgboost_evaluate.py
src/mlops_2025/model/: __init__.py  model_trainer.py  xgboost.py
src/mlops_2025/preprocessing/: base_preprocessor.py  preprocessor.py
